@@ -163,3 +163,6 @@
 [0309/214254.417:ERROR:crash_report_database_win.cc(469)] failed to stat report
 [0309/220845.032:ERROR:crash_report_database_win.cc(469)] failed to stat report
 [0309/221917.356:ERROR:crash_report_database_win.cc(469)] failed to stat report
+[0319/184929.782:ERROR:crash_report_database_win.cc(469)] failed to stat report
+[0319/185929.783:ERROR:crash_report_database_win.cc(469)] failed to stat report
+[0319/185929.783:ERROR:crash_report_database_win.cc(469)] failed to stat report
