@@ -1,9 +1,10 @@
 export const data = [
   {
     name: "JB",
+    //James
     1: 7,
     2: 4,
-    3: 0,
+    3: 5,
     4: 0,
     5: 0,
     6: 0,
@@ -14,9 +15,10 @@ export const data = [
   },
   {
     name: "JRC",
+    //Jack
     1: 7,
     2: 9,
-    3: 0,
+    3: 7,
     4: 0,
     5: 0,
     6: 0,
@@ -27,9 +29,10 @@ export const data = [
   },
   {
     name: "LR1",
+    //Liam Rose
     1: 5,
     2: 4,
-    3: 0,
+    3: 7,
     4: 0,
     5: 0,
     6: 0,
@@ -40,9 +43,10 @@ export const data = [
   },
   {
     name: "LR2",
+    //Liam Ross
     1: 6,
     2: 5,
-    3: 0,
+    3: 6,
     4: 0,
     5: 0,
     6: 0,
@@ -53,9 +57,10 @@ export const data = [
   },
   {
     name: "NF",
+    //Neil
     1: 3,
     2: 6,
-    3: 0,
+    3: 3,
     4: 0,
     5: 0,
     6: 0,
@@ -66,7 +71,22 @@ export const data = [
   },
   {
     name: "AF",
+    //Alfie
     1: 3,
+    2: 3,
+    3: 3,
+    4: 0,
+    5: 0,
+    6: 0,
+    7: 0,
+    8: 0,
+    9: 0,
+    10: 0
+  },
+  {
+    name: "AK",
+    //Aaron
+    1: 0,
     2: 3,
     3: 0,
     4: 0,
@@ -78,7 +98,22 @@ export const data = [
     10: 0
   },
   {
-    name: "TF",
+    name: "A",
+    //Adam
+    1: 0,
+    2: 0,
+    3: 3,
+    4: 0,
+    5: 0,
+    6: 0,
+    7: 0,
+    8: 0,
+    9: 0,
+    10: 0
+  },
+  {
+    name: "HH",
+    //Hayden
     1: 0,
     2: 0,
     3: 0,
@@ -91,20 +126,8 @@ export const data = [
     10: 0
   },
   {
-    name: "AK",
-    1: 0,
-    2: 3,
-    3: 0,
-    4: 0,
-    5: 0,
-    6: 0,
-    7: 0,
-    8: 0,
-    9: 0,
-    10: 0
-  },
-  {
-    name: "HH",
+    name: "TF",
+    //Theo
     1: 0,
     2: 0,
     3: 0,
